Fix picture on mobile

--- a/_scss/components/about.scss
+++ b/_scss/components/about.scss
@@ -15,10 +15,10 @@
     padding: 2.4rem 4rem;
     flex: 0 1 32%;
     height: 48rem;
-    @include until(600px) {
+    @include until(1024px) {
       min-height: 16rem;
       background-position: center 84%;
-      background-attachment: scroll;
+      background-attachment: fixed;
       background-size: 48%;
       padding: 2.4rem;
       height: 48rem;
